# fast_zero

./: .coverage  exemplo.py  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 5bd3e7f1535b_create_users_table.py  95d65bf4ecaf_segunda_migração.py
tests/: conftest.py  test_app.py  test_security.py  test_users.py
